entity_macros/tests/ui/attribute/conflicting-field-named-last_updated.stderr
error: Field named last_updated reserved for ent
 --> $DIR/conflicting-field-named-last_updated.rs:6:5
  |
6 |     #[ent(field)]
  |     ^
