entity_macros/tests/ui/attribute/conflicting-field-named-last_updated.rs
use entity::{include_ent_core, Ent};

#[include_ent_core]
#[derive(Clone, Ent)]
pub struct SimpleEnt {
    #[ent(field)]
    last_updated: usize,
}

fn main() {}
